2004-07-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-set-visited-file-modtime): If `time-list'
	is not nil, don't apply the whole body.  If the file doesn't
	exists, set modtime to '(-1 65535).
	(tramp-handle-verify-visited-file-modtime): Check whether a file
	is visiting the buffer, or the buffer has no recorded last
	modification time.  Return t in case the visiting file doesn't
	exists.
	(tramp-handle-write-region): `set-visited-file-modtime' must be
	called always when `visit' is t or a string.
	All changes suggested by Luc Teirlinck <teirllm@auburn.edu>.

2004-07-22  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-write-region): `set-visited-file-modtime'
	must be called always if `visit' is non-nil. Emacs Lisp
	documentation is not clear in this point, `write-region'
	implementation clarifies.

2004-07-17  Kai Grossjohann  <kai.grossjohann@gmx.net>

	Version 2.0.43 released.

	* tramp.el (tramp-handle-verify-visited-file-modtime): Remove
	outdated comment.

2004-07-14  Luc Teirlinck  <teirllm@auburn.edu>

	* tramp.el (tramp-handle-verify-visited-file-modtime):
	`visited-file-modtime' now returns a list of two integers, instead
	of a cons.

2004-07-13  Michael Albinus  <michael.albinus@gmx.de>

	Sync with trunk.

	* tramp.el (all): Code cleanup.  Change all `tramp-handle-xxx'
	calls to respective `xxx` calls.
	(tramp-process-alive-regexp): Precise doc string.
	(tramp-multi-action-process-alive): New defun.
	(tramp-multi-actions): Use it.
	(tramp-handle-find-backup-file-name): `copy-tree' is available
	since Emacs 21.4 only (XEmacs has it).  Implementation rewritten
	in order to avoid this function.
	(tramp-handle-write-region): Set current buffer.  If connection
	wasn't open, `file-modes' has changed it accidently.  Reported by
	David Kastrup <dak@gnu.org>.
	(tramp-enter-password, tramp-read-passwd): New arguments USER and
	HOST.
	(tramp-action-password, tramp-multi-action-password): Apply it.