@@ -1,3 +1,13 @@
+2004-07-25  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-handle-verify-visited-file-modtime): If file
+	does not exist, say it is not modified if and only if that agrees
+	with the buffer's record.
+	(tramp-handle-write-region): Pass modtime explicitely to
+	`set-visited-file-modtime', because filename can be different
+	from (buffer-file-name) if `file-precious-flag' is set.
+	All changes suggested by Luc Teirlinck <teirllm@auburn.edu>.
+
 2004-07-24  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-handle-set-visited-file-modtime): If `time-list'
@@ -6,7 +16,7 @@
 	(tramp-handle-verify-visited-file-modtime): Check whether a file
 	is visiting the buffer, or the buffer has no recorded last
 	modification time.  Return t in case the visiting file doesn't
-	exists.
+	exist.
 	(tramp-handle-write-region): `set-visited-file-modtime' must be
 	called always when `visit' is t or a string.
 	All changes suggested by Luc Teirlinck <teirllm@auburn.edu>.
